TrackAccountActivities/force-app/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <description>US-1234 Description of the userstory</description>
    <label>Offer</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>