TrackAccountActivities/force-app/main/default/objects/Offer__c/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Addressee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>