TrackAccountActivities/force-app/main/default/objects/Offer__c/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <label>Expiration date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>