TrackAccountActivities/force-app/main/default/objects/Offer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>